@@ -93,9 +93,11 @@ class HilbertBaseField(object):
         return 0 if x<=0 else x*np.log2(x)
 
     def random_array(self, shape):
-        real = numpy.random.random((shape)) * 2.0 - 1.0
-        imag = numpy.random.random((shape)) * 2.0 - 1.0
-        return real + 1j*imag
+        """Returns random array with standard normal distribution"""
+        return (
+            np.random.standard_normal(size=shape) +
+            np.random.standard_normal(size=shape)*1j
+        ) / np.sqrt(2)
 
     def eye(self, size):
         return np.eye(size)
